kubernetes/traefik-cert-manager/longhorn/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingressroute
  namespace: longhorn-system
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.kube.bladerose.me`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
      # middlewares:
      #   - name: default-headers
  tls:
    secretName: kube-bladerose-me-tls
    # secretName: kube-bladerose-me-staging-tls
